# bocs

./: README.md  pyproject.toml
bocs/: AlgorithmComparison.py  BanchmarkStatics.py  ConstraintFunctions.py  ConstraintMaker.py  LRB_1.py  LRB_2.py  LRB_3.py  LRB_4.py  RandomCaseGenerator.py  TestAlgorithm.py  TestCaseGenerator.py  calclateConstraitNumber.py  chip.py  constraintmatrix.py  randomtest.py  testfilename.py
